--- a/css/Styles.css
+++ b/css/Styles.css
@@ -7,14 +7,22 @@ body {
     width: 100%;
     max-width: 600px;
     padding: 25px 50px 10px 50px;
-    border-top: 1px dashed red;
+    border-top: 1px dashed rgb(0, 4, 255);
     border-right: 1px dashed red;
     border-bottom: 1px dashed green;
     border-left: 1px dashed orange;
     margin: 0 auto;
 }
 
-.primero, .segundo {
+.primero {
+    width: 30%;
+    max-width: 300px;
+    padding: 25px 10px;
+    border: 2px solid red;
+    text-align: right;
+    margin-left: auto;
+}
+.segundo {
     width: 30%;
     max-width: 300px;
     padding: 25px 10px;
